5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1838_1280.log
== TEST (2019-06-26 12:54:18) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
    # Move personagem para CIMA
	elif x == 'W':
			ytab = ytab - 1
    # Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab + 1

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
			moeda = moeda + 1
			   # Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		mov = mov
		

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:56:06) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
#tabuleiro = array(eval(input("Tabuleiro: ")))
tabuleiro = [[0,0,11,0,0], [0,0,33,22,11], [22,0,11,22,0]]
# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
    # Move personagem para CIMA
	elif x == 'W':
			ytab = ytab - 1
    # Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab + 1

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
			moeda = moeda + 1
			   # Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		mov = mov
		

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:56:45) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
#tabuleiro = array(eval(input("Tabuleiro: ")))
tabuleiro = [[0,0,11,0,0], [0,0,33,22,11], [22,0,11,22,0]]
# Sequencia de movimentos do personagem
#mov = input("Movimentos: ")
AADDWSDSASSAWSA
# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
    # Move personagem para CIMA
	elif x == 'W':
			ytab = ytab - 1
    # Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab + 1

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
			moeda = moeda + 1
			   # Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		mov = mov
		

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:57:54) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
#tabuleiro = array(eval(input("Tabuleiro: ")))
tabuleiro = [[0,0,11,0,0], [0,0,33,22,11], [22,0,11,22,0]]
# Sequencia de movimentos do personagem
#mov = input("Movimentos: ")
mov = AADDWSDSASSAWSA
# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
    # Move personagem para CIMA
	elif x == 'W':
			ytab = ytab - 1
    # Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab + 1

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
			moeda = moeda + 1
			   # Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		mov = mov
		

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:58:11) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
#tabuleiro = array(eval(input("Tabuleiro: ")))
tabuleiro = [[0,0,11,0,0], [0,0,33,22,11], [22,0,11,22,0]]
# Sequencia de movimentos do personagem
#mov = input("Movimentos: ")
mov = "AADDWSDSASSAWSA"
# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
    # Move personagem para CIMA
	elif x == 'W':
			ytab = ytab - 1
    # Move personagem para BAIXO
	elif x == 'S':
			ytab = ytab + 1

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
			moeda = moeda + 1
			   # Apaga moeda do tabuleiro
			tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
			life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		mov = mov
		

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 13:21:39) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
#tabuleiro = array(eval(input("Tabuleiro: ")))
tabuleiro = [[0,0,11,0,0], [0,0,33,22,11], [22,0,11,22,0]]
# Sequencia de movimentos do personagem
#mov = input("Movimentos: ")
mov = "AADDWSDSASSAWSA"
# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A' and x <= shape(tabuleiro)[0]:
		xtab = xtab - 1
    # Move personagem para DIREITA
	elif x == 'D'and x <= shape(tabuleiro)[1]:
		xtab = xtab + 1
    # Move personagem para CIMA
	elif x == 'W'and x < = shape(tabuleiro)[0]::
			ytab = ytab - 1
    # Move personagem para BAIXO
	elif x == 'S' and x <=shape(tabuleiro)[1]::
			ytab = ytab + 1

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
			   # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		mov = mov
		

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- EXECUTION TIME:
0.620898
-- ERROR:
  File "/home/codebench/codes/1838/1280/main.py", line 26
    elif x == 'W'and x < = shape(tabuleiro)[0]::
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:21:40) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
#tabuleiro = array(eval(input("Tabuleiro: ")))
tabuleiro = [[0,0,11,0,0], [0,0,33,22,11], [22,0,11,22,0]]
# Sequencia de movimentos do personagem
#mov = input("Movimentos: ")
mov = "AADDWSDSASSAWSA"
# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A' and x <= shape(tabuleiro)[0]:
		xtab = xtab - 1
    # Move personagem para DIREITA
	elif x == 'D'and x <= shape(tabuleiro)[1]:
		xtab = xtab + 1
    # Move personagem para CIMA
	elif x == 'W'and x < = shape(tabuleiro)[0]::
			ytab = ytab - 1
    # Move personagem para BAIXO
	elif x == 'S' and x <=shape(tabuleiro)[1]::
			ytab = ytab + 1

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
			   # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		mov = mov
		

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 26
    elif x == 'W'and x < = shape(tabuleiro)[0]::
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:21:57) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
#tabuleiro = array(eval(input("Tabuleiro: ")))
tabuleiro = [[0,0,11,0,0], [0,0,33,22,11], [22,0,11,22,0]]
# Sequencia de movimentos do personagem
#mov = input("Movimentos: ")
mov = "AADDWSDSASSAWSA"
# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A' and x <= shape(tabuleiro)[0]:
		xtab = xtab - 1
    # Move personagem para DIREITA
	elif x == 'D'and x <= shape(tabuleiro)[1]:
		xtab = xtab + 1
    # Move personagem para CIMA
	elif x == 'W'and x < = shape(tabuleiro)[0]:
			ytab = ytab - 1
    # Move personagem para BAIXO
	elif x == 'S' and x <=shape(tabuleiro)[1]:
			ytab = ytab + 1

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
			   # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		mov = mov
		

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 26
    elif x == 'W'and x < = shape(tabuleiro)[0]:
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 13:21:59) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
#tabuleiro = array(eval(input("Tabuleiro: ")))
tabuleiro = [[0,0,11,0,0], [0,0,33,22,11], [22,0,11,22,0]]
# Sequencia de movimentos do personagem
#mov = input("Movimentos: ")
mov = "AADDWSDSASSAWSA"
# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A' and x <= shape(tabuleiro)[0]:
		xtab = xtab - 1
    # Move personagem para DIREITA
	elif x == 'D'and x <= shape(tabuleiro)[1]:
		xtab = xtab + 1
    # Move personagem para CIMA
	elif x == 'W'and x < = shape(tabuleiro)[0]:
			ytab = ytab - 1
    # Move personagem para BAIXO
	elif x == 'S' and x <=shape(tabuleiro)[1]:
			ytab = ytab + 1

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
			   # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		mov = mov
		

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- EXECUTION TIME:
0.9767
-- ERROR:
  File "/home/codebench/codes/1838/1280/main.py", line 26
    elif x == 'W'and x < = shape(tabuleiro)[0]:
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:22:20) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
#tabuleiro = array(eval(input("Tabuleiro: ")))
tabuleiro = [[0,0,11,0,0], [0,0,33,22,11], [22,0,11,22,0]]
# Sequencia de movimentos do personagem
#mov = input("Movimentos: ")
mov = "AADDWSDSASSAWSA"
# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
    # Move personagem para CIMA
	elif x == 'W':
			ytab = ytab - 1
    # Move personagem para BAIXO
	elif x == 'S' and x <=shape(tabuleiro)[1]:
			ytab = ytab + 1

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
			   # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		mov = mov
		

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:23:30) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
#tabuleiro = array(eval(input("Tabuleiro: ")))
tabuleiro = [[0,0,11,0,0], [0,0,33,22,11], [22,0,11,22,0]]
# Sequencia de movimentos do personagem
#mov = input("Movimentos: ")
mov = "AADDWSDSASSAWSA"
# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
    # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
    # Move personagem para BAIXO
	elif x == 'S' and x <=shape(tabuleiro)[1]:
		ytab = ytab + 1

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
			   # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		mov = mov
		

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:23:40) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
#tabuleiro = array(eval(input("Tabuleiro: ")))
tabuleiro = [[0,0,11,0,0], [0,0,33,22,11], [22,0,11,22,0]]
# Sequencia de movimentos do personagem
#mov = input("Movimentos: ")
mov = "AADDWSDSASSAWSA"
# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
    # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
    # Move personagem para BAIXO
	elif x == 'S' and x <=shape(tabuleiro)[1]:
		ytab = ytab + 1

    # Trata evento
    # Moeda
#	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
			   # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		mov = mov
		

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:24:07) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
#tabuleiro = array(eval(input("Tabuleiro: ")))
tabuleiro = [[0,0,11,0,0], [0,0,33,22,11], [22,0,11,22,0]]
# Sequencia de movimentos do personagem
#mov = input("Movimentos: ")
mov = "AADDWSDSASSAWSA"
# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
    # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
    # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
    # Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

    # Trata evento
    # Moeda
#	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
			   # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		mov = mov
		

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:26:19) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
#tabuleiro = array(eval(input("Tabuleiro: ")))
tabuleiro = [[0,0,11,0,0], [0,0,33,22,11], [22,0,11,22,0]]
# Sequencia de movimentos do personagem
#mov = input("Movimentos: ")
mov = "AADDWSDSASSAWSA"
# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
    # Move personagem para DIREITA
	if x == 'D':
		xtab = xtab + 1
    # Move personagem para CIMA
	if x == 'W':
		ytab = ytab - 1
    # Move personagem para BAIXO
	if x == 'S':
		ytab = ytab + 1

    # Trata evento
    # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
			   # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	if tabuleiro[ytab,xtab] == 22:
		life = life - 5
	if tabuleiro[ytab,xtab] == 33:
		mov = mov
		

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:26:36) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
#tabuleiro = array(eval(input("Tabuleiro: ")))
tabuleiro = [[0,0,11,0,0], [0,0,33,22,11], [22,0,11,22,0]]
# Sequencia de movimentos do personagem
#mov = input("Movimentos: ")
mov = "AADDWSDSASSAWSA"
# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
    # Move personagem para DIREITA
	if x == 'D':
		xtab = xtab + 1
    # Move personagem para CIMA
	if x == 'W':
		ytab = ytab - 1
    # Move personagem para BAIXO
	if x == 'S':
		ytab = ytab + 1

    # Trata evento
    # Moeda
	if (tabuleiro[ytab,xtab] == 11):
		moeda = moeda + 1
			   # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	if tabuleiro[ytab,xtab] == 22:
		life = life - 5
	if tabuleiro[ytab,xtab] == 33:
		mov = mov
		

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 13:28:24) 
-- CODE:
from numpy import *

# Leitura do tabuleiro
#tabuleiro = array(eval(input("Tabuleiro: ")))
tabuleiro = [[0,0,11,0,0], [0,0,33,22,11], [22,0,11,22,0]]
# Sequencia de movimentos do personagem
#mov = input("Movimentos: ")
mov = "AADDWSDSASSAWSA"
# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
    # Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
    # Move personagem para DIREITA
	if x == 'D':
		xtab = xtab + 1
    # Move personagem para CIMA
	if x == 'W':
		ytab = ytab - 1
    # Move personagem para BAIXO
	if x == 'S':
		ytab = ytab + 1

    # Trata evento
    # Moeda
	if (tabuleiro [ytab,xtab] == 11):
		moeda = moeda + 1
			   # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
    # Zumbi
	if tabuleiro[ytab,xtab] == 22:
		life = life - 5
	if tabuleiro[ytab,xtab] == 33:
		mov = mov
		

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
